//------------------------------------------------------------------------------
// <auto-generated>
//     このコードはツールによって生成されました。
//     ランタイム バージョン:4.0.30319.42000
//
//     このファイルへの変更は、以下の状況下で不正な動作の原因になったり、
//     コードが再生成されるときに損失したりします。
// </auto-generated>
//------------------------------------------------------------------------------

namespace IcarusLib.Properties {
    using System;
    
    
    /// <summary>
    ///   ローカライズされた文字列などを検索するための、厳密に型指定されたリソース クラスです。
    /// </summary>
    // このクラスは StronglyTypedResourceBuilder クラスが ResGen
    // または Visual Studio のようなツールを使用して自動生成されました。
    // メンバーを追加または削除するには、.ResX ファイルを編集して、/str オプションと共に
    // ResGen を実行し直すか、または VS プロジェクトをビルドし直します。
    [global::System.CodeDom.Compiler.GeneratedCodeAttribute("System.Resources.Tools.StronglyTypedResourceBuilder", "16.0.0.0")]
    [global::System.Diagnostics.DebuggerNonUserCodeAttribute()]
    [global::System.Runtime.CompilerServices.CompilerGeneratedAttribute()]
    public class Resources {
        
        private static global::System.Resources.ResourceManager resourceMan;
        
        private static global::System.Globalization.CultureInfo resourceCulture;
        
        [global::System.Diagnostics.CodeAnalysis.SuppressMessageAttribute("Microsoft.Performance", "CA1811:AvoidUncalledPrivateCode")]
        internal Resources() {
        }
        
        /// <summary>
        ///   このクラスで使用されているキャッシュされた ResourceManager インスタンスを返します。
        /// </summary>
        [global::System.ComponentModel.EditorBrowsableAttribute(global::System.ComponentModel.EditorBrowsableState.Advanced)]
        public static global::System.Resources.ResourceManager ResourceManager {
            get {
                if (object.ReferenceEquals(resourceMan, null)) {
                    global::System.Resources.ResourceManager temp = new global::System.Resources.ResourceManager("IcarusLib.Properties.Resources", typeof(Resources).Assembly);
                    resourceMan = temp;
                }
                return resourceMan;
            }
        }
        
        /// <summary>
        ///   すべてについて、現在のスレッドの CurrentUICulture プロパティをオーバーライドします
        ///   現在のスレッドの CurrentUICulture プロパティをオーバーライドします。
        /// </summary>
        [global::System.ComponentModel.EditorBrowsableAttribute(global::System.ComponentModel.EditorBrowsableState.Advanced)]
        public static global::System.Globalization.CultureInfo Culture {
            get {
                return resourceCulture;
            }
            set {
                resourceCulture = value;
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string AluminumOre {
            get {
                return ResourceManager.GetString("AluminumOre", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Bone {
            get {
                return ResourceManager.GetString("Bone", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Carrot {
            get {
                return ResourceManager.GetString("Carrot", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string CoalOre {
            get {
                return ResourceManager.GetString("CoalOre", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Cone {
            get {
                return ResourceManager.GetString("Cone", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string CopperOre {
            get {
                return ResourceManager.GetString("CopperOre", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Exotics {
            get {
                return ResourceManager.GetString("Exotics", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Fiber {
            get {
                return ResourceManager.GetString("Fiber", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Fur {
            get {
                return ResourceManager.GetString("Fur", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string GoldOre {
            get {
                return ResourceManager.GetString("GoldOre", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Ice {
            get {
                return ResourceManager.GetString("Ice", resourceCulture);
            }
        }
        
        /// <summary>
        ///   Iron Ingot に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string IronIngot {
            get {
                return ResourceManager.GetString("IronIngot", resourceCulture);
            }
        }
        
        /// <summary>
        ///   Iron Ore に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string IronOre {
            get {
                return ResourceManager.GetString("IronOre", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Leather {
            get {
                return ResourceManager.GetString("Leather", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Lily {
            get {
                return ResourceManager.GetString("Lily", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Mushroom {
            get {
                return ResourceManager.GetString("Mushroom", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Oxide {
            get {
                return ResourceManager.GetString("Oxide", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string PlatinumOre {
            get {
                return ResourceManager.GetString("PlatinumOre", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Pumpkin {
            get {
                return ResourceManager.GetString("Pumpkin", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string RawBacon {
            get {
                return ResourceManager.GetString("RawBacon", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string RawFattyTbone {
            get {
                return ResourceManager.GetString("RawFattyTbone", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string RawFish {
            get {
                return ResourceManager.GetString("RawFish", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string RawGameMeat {
            get {
                return ResourceManager.GetString("RawGameMeat", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string RawGiantSteak {
            get {
                return ResourceManager.GetString("RawGiantSteak", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string RawMeat {
            get {
                return ResourceManager.GetString("RawMeat", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string RawSoftMeat {
            get {
                return ResourceManager.GetString("RawSoftMeat", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string RawStringyMeat {
            get {
                return ResourceManager.GetString("RawStringyMeat", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string RawWhiteMeat {
            get {
                return ResourceManager.GetString("RawWhiteMeat", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string ReedFlower {
            get {
                return ResourceManager.GetString("ReedFlower", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string SilicaOre {
            get {
                return ResourceManager.GetString("SilicaOre", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string SoyBean {
            get {
                return ResourceManager.GetString("SoyBean", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string SpoiledMeat {
            get {
                return ResourceManager.GetString("SpoiledMeat", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string SpoiledPlants {
            get {
                return ResourceManager.GetString("SpoiledPlants", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Squash {
            get {
                return ResourceManager.GetString("Squash", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Stick {
            get {
                return ResourceManager.GetString("Stick", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Stone {
            get {
                return ResourceManager.GetString("Stone", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Sulfur {
            get {
                return ResourceManager.GetString("Sulfur", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string TitaniumOre {
            get {
                return ResourceManager.GetString("TitaniumOre", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string WaterMelon {
            get {
                return ResourceManager.GetString("WaterMelon", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Wheat {
            get {
                return ResourceManager.GetString("Wheat", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string WildBerry {
            get {
                return ResourceManager.GetString("WildBerry", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Wood {
            get {
                return ResourceManager.GetString("Wood", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string Yeast {
            get {
                return ResourceManager.GetString("Yeast", resourceCulture);
            }
        }
        
        /// <summary>
        ///    に類似しているローカライズされた文字列を検索します。
        /// </summary>
        public static string YoungCoconut {
            get {
                return ResourceManager.GetString("YoungCoconut", resourceCulture);
            }
        }
    }
}
